Fix menu overlay with z-index

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -9,6 +9,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     align-items: center;
     position: fixed;
+    z-index: 1000;
 }
   
 .hamburguer{
